[build] Add a new --add-opens VM option required after the update of intellijVersion to 252.14842